# codebase2prompt

./: .coverage  .gitignore  LICENSE  MANIFEST.in  README.md  config.ini  config.ini.example  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
src/code2prompt/: __init__.py  __main__.py  cli.py  cli_commands.py  config.py  formatter.py  scanner.py
src/codebase2prompt/: __init__.py  __main__.py  cli.py  cli_commands.py  config.py  file_processor.py  formatter.py  javascript_parser.py  parser.py  scanner.py  syntax_validator.py
test_files/: test.js  test.lua
tests/: test_cli.py  test_clipboard.py  test_config.py  test_file_processing.py  test_syntax_validation.py
