[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Codebase2Prompt"
version = "0.1.0"
description = "Generate prompts from codebase structure and content"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
rich = "^13.3.1"
pyperclip = "^1.8.2"
configparser = "^5.3.0"

[tool.poetry.scripts]
c2p = "Codebase2Prompt.cli:cli"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^23.1.0"
isort = "^5.11.4"
mypy = "^1.0.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=Codebase2Prompt --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
